# Resize_Service

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
file_encoded/: encoded.txt  encoded_image.json
src/: main.cpp
uploads/tmp/38/: 388986A31227446D94D41B1EB3D71012
uploads/tmp/8A/: 8A51BB0500AD4B1BAD8CBCEC0B6800ED
